<resources>
    <string name="app_name">MW youth football portal</string>
    <string name="scout_portal">SCOUT PORTAL</string>
    <string name="mw_youth">MW YOUTH</string>
    <string name="youth_football_at_the_core">Youth football at the core</string>
    <string name="making_sure_no_potential_youth_player_goes_unnoticed_in_the_land">Making sure no potential youth player goes unnoticed in the land</string>
    <string name="get_started">Get Started</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="agent">Agent</string>
    <string name="team">Team</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agent_section">Agent Section</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="firstname">Firstname</string>
    <string name="surname">Surname</string>
    <string name="dob">DOB</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title_activity_agent_signup">AgentSignupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Username</string>
    <string name="AgentTextTV1">This is your personal portal where you can manage your players and contact football teams</string>
</resources>