<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/agentLoginEmailL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/palegreen"
        app:boxBackgroundMode="outline"
        android:layout_marginTop="180dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/agentLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/agentLoginPasswordL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/palegreen"
        app:boxBackgroundMode="outline"
        app:boxStrokeWidth="2dp"
        android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/agentLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/agentLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/login"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/loginMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/palegreen"
        android:textSize="15sp"
        android:textAlignment="center"/>
</LinearLayout>