<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Fragments.AgentFragment"
    android:background="@color/white">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/agentGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/agentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agent_section"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/agentGrid" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:columnCount="2"
            android:rowCount="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agentTitle"
            tools:layout_editor_absoluteY="20dp">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/agentSignup"
                    android:layout_width="140dp"
                    android:layout_height="170dp"
                    android:layout_row="0"
                    android:layout_rowWeight="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="10dp"
                    app:strokeColor="@color/palegreen"
                    app:strokeWidth="3dp"
                    app:cardElevation="8dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                        <ImageView
                            android:layout_width="105dp"
                            android:layout_height="100dp"
                            android:src="@drawable/signup"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="30dp"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/signup"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@color/palegreen"
                            android:layout_gravity="center_horizontal"
                            android:textAlignment="center"/>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/agentLogin"
                android:layout_width="140dp"
                android:layout_height="170dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="10dp"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/palegreen"
                app:strokeWidth="3dp"
                app:cardElevation="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <ImageView
                        android:layout_width="105dp"
                        android:layout_height="100dp"
                        android:src="@drawable/login"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/palegreen"
                        android:layout_gravity="center_horizontal"
                        android:textAlignment="center"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>